welcome.lessons.welcome.methods.slug.SlugHunting.scala.error
SlugHunting:9: error: ';' expected but 'while' found.
} while (!estSurBiscuit)
  ^